# calc-rust

./: CMakeLists.txt  Cargo.toml  README.md  build.rs
src/: lib.rs  main.cpp
